ContainerDeploy/broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Dev\magic\docker\kompose-windows-amd64.exe convert -f docker-compose-env.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: broker
  name: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: broker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Dev\magic\docker\kompose-windows-amd64.exe convert -f docker-compose-env.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/containerdeploy-xpanw: "true"
        io.kompose.service: broker
    spec:
      containers:
        - image: magicsoftware/xpa4.9:base-xpa-broker
          name: broker-container
          resources: {}
      restartPolicy: Always
status: {}
