ContainerDeploy/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Dev\magic\docker\kompose-windows-amd64.exe convert -f docker-compose-env.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: webserver
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Dev\magic\docker\kompose-windows-amd64.exe convert -f docker-compose-env.yml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/containerdeploy-xpanw: "true"
        io.kompose.service: webserver
    spec:
      containers:
        - image: xpa-webserver-developer:4.9
          name: webserver-container
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /home/xpadocker/Web_Client_Cache
              name: webserver-claim0
      restartPolicy: Always
      volumes:
        - name: webserver-claim0
          persistentVolumeClaim:
            claimName: webserver-claim0
status: {}
